<resources>
    <string name="default_message">Message here</string>
    <string name="Fnavigation_drawer_services">Services</string>
    <string name="about_app">About App</string>
    <string name="about_coinomi_copyright">V2.0 2019 PrimeStone. All rights reserved.</string>
    <string name="about_credits_bitcoinj">Uses Bitcoinj library\nhttp://bitcoinj.github.io/</string>
    <string name="about_credits_crypto_icons">Crypto-icons by Chris Shepherd\nhttps://github.com/shphrd/crypto-icons</string>
    <string name="about_credits_electrum">Uses Electrum server software\nhttps://electrum.org/</string>
    <string name="about_credits_exchange_rates">Exchange rates provided by\nhttp://www.cryptocoincharts.info/\nhttps://bitcoinaverage.com/</string>
    <string name="about_credits_font_icons">Font-icons by Daniel Bruce\nhttp://www.entypo.com</string>
    <string name="about_credits_nubits">Server infrastructure donated by NuBits - The World\'s First Stable Digital Currency\nhttps://nubits.com/</string>
    <string name="about_credits_schildbach">Influenced by Andreas Schildbach\nhttps://github.com/schildbach/bitcoin-wallet/</string>
    <string name="about_credits_translations">Translations provided by:</string>
    <string name="about_credits_translations_credits">Tamara Castellano (Italian)\nJorge Nicolas Karmis (Spanish)\nGeorge Kimionis (Greek)\n@visvirial (Japanese)\nДенис Рейн (Russian, Ukrainian)</string>
    <string name="about_credits_zxing">QR-code functionality by ZXing\nhttps://github.com/zxing/zxing</string>
    <string name="about_licence">An open source project\nhttps://github.com/coinomi/coinomi-android</string>
    <string name="about_shapeshift_message">ShapeShift.io is an instant altcoin exchange that provides Bitcoin and altcoin conversion. The platform (available in both web and API flavors) represents the fastest, most efficient way to convert between Bitcoin and dozens of altcoins within the Bitcoin ecosystem. No account needed.</string>
    <string name="about_shapeshift_title">About ShapeShift.io</string>
    <string name="accept_toc">By creating a new wallet you accept the Terms and Conditions of PrimeStone Wallet.</string>
    <string name="accept_warning">You can\'t create wallet without accept Terms of Service.</string>
    <string name="account_description_label">Description</string>
    <string name="account_extended_private_key_label">Extended private key</string>
    <string name="account_extended_public_key_label">Extended public key</string>
    <string name="account_private_key_label">Private key</string>
    <string name="account_private_key_warning">The private key allows you to send coins from this account. It is not necessary to backup this key as it is derived from your recovery phrase</string>
    <string name="account_public_key_label">Public key</string>
    <string name="account_public_key_warning">Sharing your public key will allow anybody to view your balance and transaction history.</string>
    <string name="action_about">About PrimeStone wallet</string>
    <string name="action_account_details">Account details</string>
    <string name="action_change_address_type">Change address type</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_label">Edit label</string>
    <string name="action_empty_wallet">Use all funds</string>
    <string name="action_exchange_history">Exchange history</string>
    <string name="action_new_address">New address</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_scan_qr_code">Scan</string>
    <string name="action_history">History</string>
    <string name="action_request">Request</string>
    <string name="action_balance">Balance</string>
    <string name="action_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_sign_verify_message">Sign/verify message</string>
    <string name="action_support">Technical Support</string>
    <string name="action_swap_coins">Swap coins</string>
    <string name="action_sweep_wallet">Sweep wallet</string>
    <string name="add_coin_error">Error adding %1$s: %2$s</string>
    <string name="adding_coin_confirmation_title">Add %1$s?</string>
    <string name="adding_coin_working">Please wait while creating a new %1$s account</string>
    <string name="address_error">The provided address is not valid.</string>
    <string name="address_not_found_error">The provided address could not be found in this account.</string>
    <string name="almost_equal_to">≈</string>
    <string name="ambiguous_address_message">Please select the correct coin type</string>
    <string name="ambiguous_address_title">Ambiguous address</string>
    <string name="amount_error">The provided amount is not valid</string>
    <string name="amount_error_empty">Please enter an amount</string>
    <string name="amount_error_negative">Cannot send a negative amount</string>
    <string name="amount_error_not_enough_money">The amount exceeds your balance. Current balance: %1$s</string>
    <string name="amount_error_not_enough_money_plain">Not enough money</string>
    <string name="amount_error_too_small">The minimum amount is at least %1$s</string>
    <string name="amount_to_send_label">Amount</string>
    <string name="amount_warn_fees_apply">Transaction fee of 0.0001 PSC will be deducted.</string>
    <string name="app_name">PrimeStone Wallet</string>
    <string name="app_name_long">PrimeStone Coin Wallet</string>
    <string name="app_package">com.primestone.wallet</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_u_sure_exit">Are you sure you want to exit?</string>
    <string name="are_u_sure_logout">Are You sure want to Logout?</string>
    <string name="available">Available: %1$s</string>
    <string name="backed_up_seed">I have safely stored my recovery phrase</string>
    <string name="block_height">Block Height:</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_ready">Ready</string>
    <string name="btn_write">Continue</string>
    <string name="build_version">Build Version : %1s</string>
    <string name="button_add">Add</string>
    <string name="button_add_coins">+ Coins</string>
    <string name="button_agree">Agree</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_default">Default</string>
    <string name="button_delete">Delete</string>
    <string name="button_disagree">Disagree</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_done">Done</string>
    <string name="button_download">Download</string>
    <string name="button_edit">Edit</string>
    <string name="button_execute">Execute</string>
    <string name="button_finish">Finish</string>
    <string name="button_next">Next</string>
    <string name="button_ok">Ok</string>
    <string name="button_remove">Remove</string>
    <string name="button_retry">Retry</string>
    <string name="button_return">Return</string>
    <string name="button_save">Save</string>
    <string name="button_send">SEND</string>
    <string name="button_sign">Sign</string>
    <string name="button_skip">Skip</string>
    <string name="button_verify">Verify</string>
    <string name="change_pass">Change Password</string>
    <string name="change_pin">Change PIN</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="coin_already_added">Additional accounts are not yet supported</string>
    <string name="coin_already_added_title">%1$s already added</string>
    <string name="coin_info">PrimeStone Wallet is the safest way\nto save your coins.</string>
    <string name="coin_name">PrimeStone Coin</string>
    <string name="coin_price">PrimeStone coin price</string>
    <string name="coin_warning">PrimeStone Warning</string>
    <string name="coinomi_website">https://coinomi.com</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="confirmations">Confirmations</string>
    <string name="confirmpass">Confirm\nPassword</string>
    <string name="contacting_exchange">Contacting exchange…</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_info">Do you want to copy the recovery phrase to the clipboard? If so, keep in mind that other applications may have access to this information.</string>
    <string name="copy_warning">Rate PrimeStone Wallet</string>
    <string name="create_new_address">Create a new address?</string>
    <string name="create_new_address_name">Name (optional)</string>
    <string name="create_now">Create Now</string>
    <string name="create_pin">Create PIN</string>
    <string name="create_wallet">Create a new wallet</string>
    <string name="date_label">Date</string>
    <string name="debugging_info">You can use a collection of tools to debug various issues with your wallet.</string>
    <string name="debugging_test_wallet_password">Wallet unlocking tests</string>
    <string name="debugging_test_wallet_password_results">Unlocked wallet: %1$s\n\nFingerprints\nInput: %2$s\nKey: %3$s</string>
    <string name="disconnected_label">No connection</string>
    <string name="edit_account_delete_description">This removes the account from the wallet but it is still possible to re-add it and recover the coins.</string>
    <string name="edit_account_delete_title">Remove account %1$s?</string>
    <string name="edit_account_description_label">Description</string>
    <string name="edit_account_title">Edit account</string>
    <string name="edit_address_book_entry_dialog_address_label">Address</string>
    <string name="edit_address_book_entry_dialog_label_label">Name</string>
    <string name="edit_address_book_entry_dialog_title_add">Add address</string>
    <string name="edit_address_book_entry_dialog_title_edit">Edit address</string>
    <string name="email_receipt_message">Receive an email for this exchange transaction</string>
    <string name="email_receipt_title">Email receipt</string>
    <string name="empty_field">Empty Field !</string>
    <string name="enter_name">Enter a label</string>
    <string name="enter_pass_reset">Please enter your Password to reset your PIN</string>
    <string name="enter_password">Enter your Password</string>
    <string name="erase_address">Erase address</string>
    <string name="error_camera">Could not access the device camera</string>
    <string name="error_could_not_read_wallet">Could not read wallet</string>
    <string name="error_generic">Error occurred while performing action</string>
    <string name="exchange_and_pay_title">Exchange and send</string>
    <string name="exchange_history_empty">No exchanges made</string>
    <string name="exchange_rates_empty_search">Could not find exchange rate</string>
    <string name="exchange_rates_load_error">Could not load exchange rates</string>
    <string name="exchange_rates_loading">Loading exchange rates</string>
    <string name="extra_entropy">Extra entropy</string>
    <string name="fa_font_icon_copy"></string>
    <string name="fa_font_icon_receive_coins"></string>
    <string name="fa_font_icon_send_coins"></string>
    <string name="fa_font_lock"></string>
    <string name="fa_font_refresh"></string>
    <string name="fa_icon_unused"></string>
    <string name="override_restore_wallet_warning_message">If you restore a wallet, your existing wallet will be lost unless you backed up you recovery phrase.</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_wallet_title">Unlock your Wallet</string>
</resources>