<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/root_layout"
    android:background="@drawable/rv_popup_border"
    android:padding="10.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textSize="17.0sp"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:id="@id/lbl_sub_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:text="@string/coin_warning"
        style="@style/Base.TextAppearance.AppCompat.Medium" />
        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:textSize="16.0sp"
            android:textColor="@color/white"
            android:id="@id/lbl_warning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:text="@string/override_restore_wallet_warning_message" />
    <LinearLayout
        android:gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <mehdi.sakout.fancybuttons.FancyButton
            android:textSize="16.0sp" android:id="@id/tv_cancel"
            android:paddingLeft="10.0dip" android:paddingTop="4.0dip"
            android:paddingRight="10.0dip" android:paddingBottom="4.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            fancy:fb_defaultColor="@android:color/transparent"
            fancy:fb_text="@string/button_cancel" fancy:fb_textColor="@color/white"
            fancy:fb_focusColor="@color/white" />
        <mehdi.sakout.fancybuttons.FancyButton android:textSize="16.0sp"
            android:id="@id/tv_confirm" android:paddingLeft="5.0dip"
            android:paddingTop="4.0dip" android:paddingBottom="4.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textAllCaps="true"
            fancy:fb_defaultColor="@android:color/transparent"
            fancy:fb_text="@string/button_confirm" fancy:fb_textColor="@color/white"
            fancy:fb_focusColor="@color/white" />
    </LinearLayout>
</LinearLayout>