<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/rv_popup_border"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:id="@id/root_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="17.0sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@id/tv_title"
                android:paddingTop="4.0dip"
                android:paddingRight="8.0dip"
                android:paddingBottom="4.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/unlock_wallet_title"
                android:layout_centerVertical="true"
                style="@style/Base.TextAppearance.AppCompat.Medium" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip">
                <TextView
                    android:textColor="@color/white"
                    android:id="@id/password_message"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_password"
                    style="@style/SecondaryText" />
                <EditText
                    android:textColor="@color/white"
                    android:id="@id/password"
                    android:background="@color/primary_500"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textIsSelectable="false" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip">
            <mehdi.sakout.fancybuttons.FancyButton
                android:textSize="17.0sp"
                android:id="@id/tv_close"
                android:paddingLeft="10.0dip"
                android:paddingTop="4.0dip"
                android:paddingRight="10.0dip"
                android:paddingBottom="4.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fancy:fb_defaultColor="@android:color/transparent"
                fancy:fb_text="@string/button_cancel"
                fancy:fb_textColor="@color/white"
                fancy:fb_focusColor="@color/white" />
            <mehdi.sakout.fancybuttons.FancyButton
                android:textSize="17.0sp"
                android:id="@id/tv_confirm"
                android:paddingLeft="10.0dip"
                android:paddingTop="4.0dip"
                android:paddingRight="10.0dip"
                android:paddingBottom="4.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fancy:fb_defaultColor="@android:color/transparent"
                fancy:fb_text="@string/unlock"
                fancy:fb_textColor="@color/white"
                fancy:fb_focusColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar android:id="@id/process" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
</RelativeLayout>